# diloco-rs

./: .gitignore  Cargo.toml  README.md
crates/baseline/: Cargo.toml
crates/baseline/src/: main.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: main.rs
crates/diloco-core/: Cargo.toml
crates/diloco-core/src/: data.rs  eval.rs  lib.rs  metrics.rs  model.rs  outer.rs  params.rs  tokenizer.rs
crates/diloco-net/: Cargo.toml  build.rs
crates/diloco-net/proto/: diloco.proto
crates/diloco-net/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
data/: input.txt
scripts/: analyze.py  plot_sweep.py  run_comparison.sh  run_experiment.sh  run_local.sh  run_sweep.sh
