[workspace]
resolver = "2"
members = [
    "crates/diloco-core",
    "crates/worker",
]

# Shared dependency versions for every crate in the workspace. Member crates
# opt in with `foo = { workspace = true }`. The coordinator crate (DiLoCo's
# parameter-averaging orchestrator) will be added as a sibling member later.
[workspace.dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
