[workspace]
resolver = "2"
members = [
    "crates/diloco-core",
    "crates/diloco-net",
    "crates/worker",
    "crates/coordinator",
    "crates/baseline",
]

# Shared dependency versions for every crate in the workspace. Member crates
# opt in with `foo = { workspace = true }`.
[workspace.dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
safetensors = "0.7"
# gRPC transport (coordinator <-> worker). tonic 0.14 split prost codegen into
# separate crates: tonic-prost (runtime codec) + tonic-prost-build (codegen).
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"

[profile.release]
opt-level = 3
