[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# DiLoCo's outer-optimizer process. It holds the authoritative global
# parameters, waits for all workers to submit each round (a synchronous
# barrier), averages their pseudo-gradients, applies the outer optimizer, and
# broadcasts the new global parameters back.
[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
diloco-core = { path = "../diloco-core" }
diloco-net = { path = "../diloco-net" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
