[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# A single training node. For now it runs a standalone local training loop;
# under DiLoCo this becomes the "inner optimizer" worker that periodically
# syncs parameters with the coordinator.
[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
diloco-core = { path = "../diloco-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
